src/objects/Recruiting_Activity__c.object
<CustomObject>
    <description>Describes college recruiting activity associated with recruiting organizations.</description>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Recruiting_Contact__c</referenceTo>
        <relationshipLabel>Recruiting Activities</relationshipLabel>
        <relationshipName>Recruiting_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Duration_in_minutes__c</fullName>
        <label>Duration (in minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Prospects__c</fullName>
        <label>Number of Prospects</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recruiting_Activity_Safe_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recruiting Activity Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recruiting_Organization__c</fullName>
        <label>Recruiting Organization</label>
        <referenceTo>Recruiting_Organization__c</referenceTo>
        <relationshipLabel>Recruiting Activities</relationshipLabel>
        <relationshipName>Recruiting_Activities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Career Services Call</fullName>
                </value>
                <value>
                    <fullName>Career Services Meeting</fullName>
                </value>
                <value>
                    <fullName>Info Session</fullName>
                </value>
                <value>
                    <fullName>Career Fair</fullName>
                </value>
                <value>
                    <fullName>Workshop</fullName>
                </value>
                <value>
                    <fullName>Networking Event</fullName>
                </value>
                <value>
                    <fullName>Campus Interviews</fullName>
                </value>
                <value>
                    <fullName>CA-Initiated Event</fullName>
                </value>
                <value>
                    <fullName>CA Event</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Recruiting Activity</label>
    <nameField>
        <label>Recruiting Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recruiting Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>